--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,16 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <!-- worker-src blob:; 
+    child-src blob: gap:; -->
+    <!-- <meta http-equiv="Content-Security-Policy" 
+    content="
+      img-src 'self' blob: data:;
+      default-src * data: 'unsafe-eval' 'unsafe-inline' blob:""> -->
+    <!-- <meta http-equiv="Content-Security-Policy" content="default-src *;
+    img-src * 'self' data: https:; script-src 'self' 'unsafe-inline' 'unsafe-eval' *;
+    style-src  'self' 'unsafe-inline' *"> -->
+    <!-- <meta http-equiv="Content-Security-Policy" content="script-src 'self' http://localhost:8082/ 'unsafe-inline' 'unsafe-eval';"> -->
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>Kost Catleya</title>
 
